@startuml
interface Solver {
    +solve(program: PrologProgram): Iterator[Solution]
}

interface PrologProgram {
    + staticTheory: Theory
    + dynamicTheory: Theory
    + goal: Term
}

enum Solution {
    Yes(query: Struct, substitution: Substitution)
    No(query: Struct)
    Halt(exception)
}

interface Theory {
    +clauses: Iterator[Clause]
}

-class TuPrologClassicSolver {
}

folder f as "it.unibo.tuprolog" {
    component "solve-classic-jvm" {
    }
}



PrologProgram <-- Solver : solves
Solver --> Solution : produces
PrologProgram o-- Theory

Solver <|-- TuPrologClassicSolver
TuPrologClassicSolver --> "solve-classic-jvm" : depends-on
@enduml